# note-desktop-caobang

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  widget.html
.github/workflows/: build.yml
src/: App.tsx  WidgetView.tsx  aiClient.ts  types.ts  utils.ts  widget.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  lib.rs  main.rs  tray.rs
src/components/: CalendarWidget.tsx  TaskWidget.tsx
