[package]
name = "note-desktop"
version = "1.0.0"
description = "Ghi Chú Chuẩn - Lịch & Công việc (Desktop)"
authors = ["AUTOWORK"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "note_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
# Tối ưu dung lượng + RAM (ưu tiên desktop nhẹ, mượt).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
